<resources>
    <string name="app_name" translatable="false">Sysctl GUI</string>
    <string name="splash_status_checking_root">Checking for root access</string>
    <string name="splash_status_checking_busybox">Checking for busybox</string>
    <string name="splash_status_checking_migration">Checking for old database schema</string>
    <string name="splash_status_performing_migration">Performing database migration</string>
    <string name="error">Error</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="show_variables">Show variables</string>
    <string name="show_variables_sum">Display and edit all kernel parameters in a list</string>
    <string name="sysctl_operations">Sysctl operations</string>
    <string name="read_from_file">Read values from file</string>
    <string name="read_from_file_sum">Use this option to load parameters from a selected .conf or .json file</string>
    <string name="show_favorites">Show favorites</string>
    <string name="show_favorites_sum">Access your favorite kernel parameters from this list</string>
    <string name="exit">Exit</string>
    <string name="kernel_params">Kernel parameters</string>
    <string name="browse_variables">Browse variables</string>
    <string name="browse_variables_sum">Browse /proc/sys for a specific kernel parameter</string>
    <string name="edit_params">Edit parameters</string>
    <string name="unexpected_error">Something wrong is not right</string>
    <string name="error_empty_input_field">Please check the input fields</string>
    <string name="failed">Failed</string>
    <string name="invalid_path">Invalid path</string>
    <string name="sysctl">Sysctl</string>
    <string name="sysctl_help">Sysctl is used to modify kernel parameters at runtime. The parameters available are those listed under /proc/sys.</string>
    <string name="app_description">This apps main purpose is to provide a graphical way to edit these parameters. You can find its source code on <a href="https://github.com/Lennoard/SysctlGUI">GitHub</a>. Support on <a href="https://forum.xda-developers.com/android/apps-games/app-sysctlgui-modify-kernel-parameters-t3960785">XDA Thread</a>.</string>
    <string name="list_folders_first">List folders first</string>
    <string name="list_folders_first_sum">List folders first when using the kernel parameter browser option</string>
    <string name="app">Application</string>
    <string name="operations">Operations</string>
    <string name="allow_blank_values">Allow blank values</string>
    <string name="commit_mode">Commit mode</string>
    <string name="guess_input_type">Guess input type</string>
    <string name="done">Done</string>
    <string name="use_busybox_on">Busybox will be used to ensure compatibility</string>
    <string name="use_busybox">Use busybox</string>
    <string name="use_busybox_off">Currently relying on system\'s sysctl binary</string>
    <string name="guess_input_type_sum">Try to set the best input type for the keyboard based on the value of the parameter</string>
    <string name="root_not_found_sum">Root access not found. You can only edit properties with root access.</string>
    <string name="information">Information</string>
    <string name="no_info_available">No documentation available for this parameter</string>
    <string name="search">Search</string>
    <string name="start_up">Start Up</string>
    <string name="start_up_sum">Allow to apply parameters on start up</string>
    <string name="notification_start_up_title">Applying parameters</string>
    <string name="notification_start_up_description">Applying your parameters</string>
    <string name="notification_start_up_description_delay">Applying in %d seconds…</string>
    <string name="notification_start_up_channel_name">Start Up Notification</string>
    <string name="notification_start_up_channel_description">Applying your parameters</string>
    <string name="manage_parameters">Manage parameters</string>
    <string name="manage_parameters_sum">Manage the parameters that will be applied at startup</string>
    <string name="export_parameters">Export parameters</string>
    <string name="export_parameters_sum">Export parameters that you have altered using this application to a JSON file</string>
    <string name="no_parameters_found">No parameters found</string>
    <string name="restore_parameters">Restore parameters</string>
    <string name="restore_parameters_sum">Restore your previous parameter backup</string>
    <string name="import_error">Failed to import parameters</string>
    <string name="import_error_invalid_json">Invalid or malformed JSON file</string>
    <string name="import_error_invalid_file_type">Can\'t open file: invalid file type.</string>
    <string name="import_error_empty_file">Can\'t import params: empty file.</string>
    <string name="import_error_malformed_line">Can\'t import params: there is a formatting error in the file.</string>
    <string name="import_success_message">%d parameter(s) applied</string>
    <string name="open_documentation">Open documentation</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="startup_delay">Startup delay</string>
    <string name="startup_delay_sum">Execution will be delayed by %d seconds</string>
    <string name="startup_delay_disabled">Execution will not delayed</string>
    <string name="set_favorite">Set as favorite</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="empty_favorites_widget">No favorites selected</string>
    <string name="tasker_list">Tasker list</string>
    <string name="tasker_list_primary">Primary list</string>
    <string name="tasker_list_secondary">Secondary list</string>
    <string name="tasker_list_plugin_primary">Primary Tasker list</string>
    <string name="tasker_list_plugin_secondary">Secondary Tasker list</string>
    <string name="tasker_list_plugin_favorites">Favorites list</string>
    <string name="tasker_list_plugin_apply_on_boot">Apply on boot list</string>
    <string name="tasker_toast">SysctlGUI: Tasker profile #%d applied</string>
    <string name="select_tasker_list">Select a Tasker list</string>
    <string name="removed_from_tasker_list">Removed from Tasker list #%d</string>
    <string name="added_to_tasker_list">Added to Tasker list #%d</string>
    <string name="tasker_select_list">Select a list to be used with Tasker</string>
    <string name="tasker_plugin_description">Once triggered by Tasker, the plugin will immediately reapply all parameters from the selected list with their respective values.</string>
    <string name="tasker_settings">Tasker settings</string>
    <string name="add_to_tasker_list">Add to Tasker</string>
    <string name="remove_from_tasker_list">Remove from Tasker</string>
    <string name="apply_failure_format">Failed to apply params: %s</string>
    <string name="undo">Undo</string>
    <string name="tile_start_app_label">Start Sysctl GUI</string>
    <string name="tile_toggle_start_up_label">Run Sysctl GUI at boot</string>
    <string name="tile_toggle_start_up_no_root_access_label">Requires root access</string>
    <string name="tile_toggle_start_up_no_root_access_toast">Root access required</string>
    <string name="import_parameters">Import parameters</string>
    <string name="backup_parameters">Backup parameters</string>
    <string name="backup_parameters_sum">Backup all current runtime parameters. Please note that not all of these can be reapplied back once restored.</string>
    <string name="export_error">Failed to export parameters</string>
    <string name="export_error_io">Parameter export failed due to an IO error</string>
    <string name="export_error_no_param">Failed: no parameter found</string>
    <string name="export_options">Export options</string>
    <string name="export_success_message">Parameters successfully exported</string>
    <string name="export_options_sum">Import, export or back up kernel parameters</string>
    <string name="please_wait">Please wait, this may take some time…</string>
    <string name="browse">Browse</string>
    <string name="export">Export</string>
    <string name="param_list">Param list</string>
    <string name="try_again">Try again</string>
    <string name="apply_param">Apply</string>
    <string name="restore_param">Restore</string>
    <string name="param">Parameter</string>
    <string name="value">Value</string>
    <string name="last_applied_value">Last applied value</string>
    <string name="current_value">Current value</string>
    <string name="apply_value_error">Selected value could not be applied</string>
    <string name="commit_value_error">Selected value could not be applied. Try using \"echo\" mode.</string>
    <string name="dynamic_colors">Dynamic colors</string>
    <string name="dynamic_colors_sum">Use dynamic colors (Monet theme) when available</string>
    <string name="dark_theme">Force dark theme</string>
    <string name="dark_them_sum">Force dark theme when available</string>
    <string name="favorites">Favorites</string>
    <string name="presets">Presets</string>
    <string name="preset_error_file_creation">File creation cancelled or failed</string>
    <string name="preset_error_file_picking">File picking cancelled or failed</string>
    <string name="preset_error_opening_file">There was an error while opening the file</string>
    <string name="preset_error_processing_file">There was an error while processing the file</string>
    <string name="favorite_param_deleted_format">Param deleted: %s</string>
    <string name="go_back">Go back</string>
    <string name="read_documentation_format">Read documentation for \"%1$s\"</string>
    <string name="acessibility_directory_description_format">Directory: %1$s</string>
    <string name="acessibility_param_description_format">Parameter: %1$s</string>
    <string name="acessibility_param_icon_description">Parameter icon</string>
    <string name="acessibility_davegate_to_directory_description">Navigate to directory</string>
    <string name="marked_as_favorite">Marked as favorite</string>
    <string name="toggle_format">Toggle %1$s</string>
    <string name="mark_as_favorite">Favorite</string>
    <string name="toggle_tasker_param">Toggle Tasker param</string>
    <string name="value_applied_successfully">Value applied successfully</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="long_press_to_copy">Long press to copy</string>
    <string name="tasker_list_format">Tasker list: %1$s</string>
    <string name="new_value">New value</string>
    <string name="read_more">Read more</string>
    <string name="documentation">Documentation</string>
    <string name="parameter_value">Parameter value</string>
    <string name="applying_preset">Applying preset</string>
    <string name="parameters_found_format">%1$d parameters found</string>
    <string name="import_text">Import</string>
    <string name="loading_preset">Loading preset…</string>
    <string name="success">Success</string>
    <string name="presets_import_success_message">Presets successfully imported</string>
    <string name="import_presets_description">Import presets from a file</string>
    <string name="export_presets_description">Export presets to a file</string>
    <string name="search_title">Search kernel parameters</string>
    <string name="search_no_suggestions">No suggestions available</string>
    <string name="search_no_results_format">No results found for \"%1$s\"</string>
    <string name="search_message">Enter a query to search for kernel parameters</string>
    <string name="acessibility_search_icon">Search Icon</string>
    <string name="clear_search">Clear search</string>
    <string name="recent_searches">Recent searches</string>
    <string name="history_item">History item</string>
</resources>