<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/app">

        <SwitchPreferenceCompat
            app:key="list_folders_first"
            app:title="@string/list_folders_first"
            app:summary="@string/list_folders_first_sum"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="guess_input_type"
            app:title="@string/guess_input_type"
            app:summary="Try to set the best input type for the keyboard based on the value of the paramener"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/operations">

        <ListPreference
            app:key="commit_mode"
            app:entries="@array/commit_modes"
            app:entryValues="@array/commit_modes_values"
            app:title="@string/commit_mode"
            app:defaultValue="sysctl" />

        <SwitchPreferenceCompat
            app:key="allow_blank_values"
            app:title="@string/allow_blank_values"
            app:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>
