<shortcuts xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="KernelParamBrowser"
        android:enabled="true"
        android:icon="@drawable/ic_folder_outline_dark"
        android:shortcutShortLabel="@string/browse_variables"
        android:shortcutLongLabel="@string/browse_variables_sum"
        tools:targetApi="n_mr1">
        <intent
            android:action="BrowseParams"
            android:targetPackage="com.androidvip.sysctlgui"
            android:targetClass="com.androidvip.sysctlgui.ui.StartActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="ExportOptions"
        android:enabled="true"
        android:icon="@drawable/ic_export_outline_dark"
        android:shortcutShortLabel="@string/export_options"
        android:shortcutLongLabel="@string/export_options_sum"
        tools:targetApi="n_mr1">
        <intent
            android:action="ExportParams"
            android:targetPackage="com.androidvip.sysctlgui"
            android:targetClass="com.androidvip.sysctlgui.ui.StartActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="Settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_outline_dark"
        android:shortcutShortLabel="@string/settings"
        android:shortcutLongLabel="@string/settings"
        tools:targetApi="n_mr1">
        <intent
            android:action="OpenSettings"
            android:targetPackage="com.androidvip.sysctlgui"
            android:targetClass="com.androidvip.sysctlgui.ui.StartActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>
