<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/text_margin"
    android:paddingRight="@dimen/text_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CategoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sysctl_operations" />

        <com.google.android.material.card.MaterialCardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/mainParamsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    app:srcCompat="@drawable/ic_edit_outline"
                    app:tint="?attr/iconColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CardTitleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_variables" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CardContentText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_variables_sum" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/mainParamBrowser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    app:srcCompat="@drawable/ic_folder_outline"
                    app:tint="?attr/iconColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CardTitleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/browse_variables" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CardContentText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/browse_variables_sum" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/mainReadFromFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:tint="?attr/iconColor"
                    app:srcCompat="@drawable/ic_file_import_outline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CardTitleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/read_from_file" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CardContentText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/read_from_file_sum" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/mainFavorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    app:srcCompat="@drawable/ic_favorite_unselected"
                    app:tint="?attr/iconColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CardTitleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_favorites" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CardContentText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_favorites_sum" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CategoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <com.google.android.material.card.MaterialCardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    app:srcCompat="@drawable/ic_info_outline"
                    app:tint="?attr/iconColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CardTitleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sysctl" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CardContentText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sysctl_help" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="?android:attr/listDivider" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/mainAppDescription"
                        style="@style/CardContentText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_description" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>