<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/taskerDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/done"
        app:backgroundTint="?colorSecondary"
        app:icon="@drawable/ic_check" />

    <LinearLayout
        android:id="@+id/taskerSelectFeatureLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/tasker" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/tasker_select_list"
            android:textColor="?colorSecondary" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/tasker_plugin_description" />

        <Spinner
            android:id="@+id/taskerListSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:entries="@array/tasker_plugins_lists"
            android:padding="8dp" />

    </LinearLayout>


</FrameLayout>
